[metadata]
name = lrbd
summary = Simplified iSCSI manamgement of Ceph Images.
description-file =
    README.md
author = SUSE
author-email = something@suse.com
home-page = http://github.com/SUSE/lrbd
project_urls =
    Source Code = http://github.com/SUSE/lrbd
classifier =
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    lrbd

[entry_points]
console_scripts =
    lrbd = lrbd.main:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1
